# aula_16_a_20

./: README.md  desafio_aula_17.db  meubanco_aula_17.db  pokemon.db  pyproject.toml
src/aula_16/: main.py
src/aula_17/: desafio.py  exemplo_01.py
src/aula_18/: exemplo_00.py
src/aula_18/organizado/: controller.py  main.py
src/aula_19/: main.py
