[project]
name = "bootcamp-python-16-a-20"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Figueiredo",email = "samuel.lobo2004@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "fastapi[standard] (>=0.118.0,<0.119.0)"
]

[tool.poetry]
packages = [{include = "bootcamp_python_16_a_20", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
